--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -7,12 +7,17 @@
   <div class="row">
     {{#each products as |product| }}
       <div class="col-sm-4">
-        <a href="/products/{{ product.id }}">
-          <div class="thumbnail">
-  					<img src="http://i.imgur.com/qK42fUu.jpg">
-            <h6>{{product.name}}</h6>
-  				</div>
-        </a>
+        <div class="thumbnail">
+          <div>
+            <a href="/categories/{{ product.Category.id }}">
+              {{product.Category.name}}
+            </a>
+          </div>
+          <a href="/products/{{ product.id }}">
+            <img src="http://i.imgur.com/qK42fUu.jpg">
+            <h6>{{product.name}} - {{product.price}}</h6>
+          </a>
+				</div>
       </div>
     {{/each }}
   </div>
