--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -14,6 +14,7 @@
     <input type="number" class="form-control" id="min_price" placeholder="Minimum Price">
     <input type="number" class="form-control" id="max_price" placeholder="Maximum Price">
     <select name="category[id]" id="category" class="form-control">
+      <option value="empty"></option>
         {{#each categories as |category| }}
           <option value="{{ category.id }}">{{ category.name }}</option>
         {{/each }}
@@ -27,6 +28,7 @@
   <div class="form-group">
     <label for="sort">Sort By:</label>
     <select name="sortBy" id="sort_by" class="form-control">
+      <option value="empty"></option>
       <option value="nameAsc">By name ascending</option>
       <option value="nameDesc">By name descending</option>
       <option value="priceAsc">By price ascending</option>
@@ -49,9 +51,10 @@
     <div class="col-xs-4 index-img">
       <img src="/images/{{product.photo}}" /><br>
       <div class="text-center">
-        <p><a href="{{product.id}}">{{product.name}}</a></p>
+        <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
         <p>{{product.price}}</p>
         <p>{{product.Category.name}}</p>
+        <button type="submit" class="btn btn-primary">Add to Cart</button>
       </div>
     </div>
   {{/each}}
