--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -17,7 +17,7 @@
 
       <ul class="nav navbar-nav navbar-right">
          <li>
-          <a href="#">Search<span class="caret"></span></a>
+          <a href="#">Search</a>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shopping Cart<span class="caret"></span></a>
