--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -1,10 +1,13 @@
 <header class="page-header">
  <h1>Products</h1>
+ {{#if hasSearched}}
+ <h2>Results from search: {{search}}<h2>
+ {{/if}}
 </header>
 
-<form>
+<form action="/search" method="GET">
   <div class="form-group">
-    <input type="text" class="form-control" id="search_text" placeholder="Search">
+    <input type="text" name="search_text" class="form-control" id="search_text" placeholder="Search">
      <button type="submit" class="btn btn-primary">Submit Search</button>
   </div>
 </form>
