--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-xs-3">
-      <img src="/images/{{product.photo}}">
+      <img src="/images/{{currentProduct.photo}}">
   </div>
   <div class="col-xs-3">
       <p>{{currentProduct.name}}</p>
@@ -34,7 +34,7 @@
       <div class="text-center">
         <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
         <p>{{product.price}}</p>
-        <p>{{currentProduct.Category.name}}</p>
+        <p>{{../currentProduct.Category.name}}</p>
         <button type="submit" class="btn btn-primary">Add to Cart</button>
       </div>
     </div>
