--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>
-      OkOdin
+      Mimir's Market
       {{#if title }}
         | {{ title }}
       {{/if }}
