--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Mimir's Market</a>
+      <a class="navbar-brand" href="/products">Mimir's Market</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -17,7 +17,7 @@
 
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#">Analytics</a></li>
-          <li><a href="#">Products</a></li>
+          <li><a href="/products">Products</a></li>
           <li><a href="#">Checkout</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cart <span class="caret"></span></a>
