--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -5,7 +5,7 @@
  {{/if}}
 </header>
 
-<form action="/search" method="GET">
+<form action="/search" method="POST">
   <div class="form-group">
     <input type="text" name="search_text" class="form-control" id="search_text" placeholder="Search">
      <button type="submit" class="btn btn-primary">Submit Search</button>
