--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -4,7 +4,7 @@
  <h2>Results from search: {{search}}<h2>
  {{/if}}
  {{#if hasFiltered}}
- <h2>Results from filtering (min price: {{minPrice}}, max price: {{maxPrice}}, category: {{product.Category.name}})<h2>
+ <h2>Results from filtering (min price: {{minPrice}}, max price: {{maxPrice}}, category: {{categoryId}})<h2>
  {{/if}}
 </header>
 
@@ -20,7 +20,7 @@
     <input type="number" name="minPrice" class="form-control" id="min_price" placeholder="Minimum Price">
     <input type="number" name="maxPrice" class="form-control" id="max_price" placeholder="Maximum Price">
     <select name="product[categoryId]" id="category" class="form-control">
-      <option value="empty"></option>
+      <option value=""></option>
         {{#each categories as |category| }}
           <option value="{{ category.id }}">{{ category.name }}</option>
         {{/each }}
