--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -1,11 +1,6 @@
 <header class="page-header">
  <h1>Products</h1>
- {{#if hasSearched}}
- <h2>Results from search: {{search}}<h2>
- {{/if}}
- {{#if hasFiltered}}
- <h2>Results from filtering (min price: {{minPrice}}, max price: {{maxPrice}}, category: {{categoryId}})<h2>
- {{/if}}
+
 </header>
 
 <form action="/search" method="GET">
@@ -49,13 +44,19 @@
 <div class="row">
   <div class="col-xs-12 text-center">
     <h2>Products:</h2>
+    {{#if hasSearched}}
+    <h2>Results from search: {{search}}<h2>
+    {{/if}}
+    {{#if hasFiltered}}
+    <h2>Results from filtering (min price: {{minPrice}}, max price: {{maxPrice}}, category: {{categoryId}})<h2>
+    {{/if}}
   </div>
 </div>
 <div class="clearfix"></div>
 <div class="row">
  {{#each products as |product|}}
     <div class="col-xs-4 index-img">
-      <img src="/images/{{product.photo}}" /><br>
+      <img src="/images/{{product.photo}}" height="180" width="180" /><br>
       <div class="text-center">
         <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
         <p>{{product.price}}</p>
