--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-xs-3">
-      <img src="/images/{{currentProduct.photo}}">
+      <img src="/images/{{currentProduct.photo}}" height="180" width="180">
   </div>
   <div class="col-xs-3">
       <p>{{currentProduct.name}}</p>
@@ -30,7 +30,7 @@
 <div class="row">
  {{#each products as |product|}}
     <div class="col-xs-4 index-img">
-      <img src="/images/{{product.photo}}" /><br>
+      <img src="/images/{{product.photo}}" height="180" width="180" /><br>
       <div class="text-center">
         <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
         <p>{{product.price}}</p>
