--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -57,10 +57,13 @@
     <div class="col-xs-4 index-img">
       <img src="/images/{{product.photo}}" height="180" width="180" /><br>
       <div class="text-center">
-        <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
-        <p>{{product.price}}</p>
-        <p>{{product.Category.name}}</p>
-        <button type="submit" class="btn btn-primary">Add to Cart</button>
+        <form action="/addToCart" method="POST">
+          <input type="hidden" name="productId" value="{{product.id}}">
+          <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
+          <p>{{product.price}}</p>
+          <p>{{product.Category.name}}</p>
+          <button type="submit" class="btn btn-primary">Add to Cart</button>
+        </form>
       </div>
     </div>
   {{/each}}
