--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -22,6 +22,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shopping Cart<span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a href="/cart">Shopping Cart</a></li>
             <li><a href="#">Checkout</a></li>
           </ul>
         </li>
