--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -56,33 +56,7 @@
 {{#if products.length }}
   <div class="row">
     {{#each products as |product| }}
-    <div class="col-sm-4">
-      <div class="card">
-        <a href="/products/{{ product.id }}">
-          <img class="card-img-top gallery-image" src="http://i.imgur.com/qK42fUu.jpg">
-        </a>
-        <div class="card-block">
-          <div class="float-right">
-            ${{product.price}}
-          </div>
-          <h4 class="card-title">
-            <a href="/products/{{ product.id }}">
-              {{product.name}}
-            </a>
-          </h4>
-          <p class="card-text">
-            in
-            <a href="/categories/{{ product.Category.id }}">
-              {{product.Category.name}}
-            </a>
-          </p>
-          <p class="card-text">
-            {{product.description}}
-          </p>
-          <a href="#" class="btn btn-primary">+ Cart</a>
-        </div>
-      </div>
-    </div>
+      {{> products/_product product=product}}
     {{/each }}
   </div>
 
