--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -57,15 +57,22 @@
     <div class="col-xs-4 index-img">
       <img src="/images/{{product.photo}}" height="180" width="180" /><br>
       <div class="text-center">
+        {{#if (isInCart product.id ../cartProducts)}}
+        <form action="/cart" method="GET">
+          <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
+          <p>{{product.price}}</p>
+          <p>{{product.Category.name}}</p>
+          <button type="submit" class="btn btn-success">Edit Cart</button>
+        </form>
+        {{else}}
         <form action="/addToCart" method="POST">
           <input type="hidden" name="productId" value="{{product.id}}">
           <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
           <p>{{product.price}}</p>
           <p>{{product.Category.name}}</p>
-          {{#if isInCart product.id cartProducts}}
-            <button type="submit" class="btn btn-success">Edit Cart</button>
           <button type="submit" class="btn btn-primary">Add to Cart</button>
         </form>
+        {{/if}}
       </div>
     </div>
   {{/each}}
