--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -6,25 +6,26 @@
 <form action="/search" method="GET">
   <div class="form-group">
     <input type="text" name="searchText" class="form-control" id="search_text" placeholder="Search">
-     <button type="submit" class="btn btn-primary">Submit Search</button>
+    <br>
+     <button type="submit" class="btn btn-primary">Search</button>
   </div>
 </form>
 
 <form action="/filter" method="GET">
   <div class="form-group">
-    <input type="number" name="minPrice" class="form-control" id="min_price" placeholder="Minimum Price">
-    <input type="number" name="maxPrice" class="form-control" id="max_price" placeholder="Maximum Price">
+    <input type="number" name="minPrice" class="form-control" id="min_price" placeholder="Minimum Price"><br>
+    <input type="number" name="maxPrice" class="form-control" id="max_price" placeholder="Maximum Price"><br>
     <select name="product[categoryId]" id="category" class="form-control">
-      <option value=""></option>
+      <option value="">Choose Category: </option>
         {{#each categories as |category| }}
           <option value="{{ category.id }}">{{ category.name }}</option>
         {{/each }}
       </select>
     </div>
-     <button type="submit" class="btn btn-primary">Submit Search</button>
-  </div>
+     <button type="submit" class="btn btn-primary">Filter</button>
+  </div><br>
 </form>
-
+<br>
 <form action="/order" method="GET">
   <div class="form-group">
     <select name="orderBy" id="sort_by" class="form-control">
@@ -35,8 +36,8 @@
       <option value="&quot;price&quot; DESC">By price ascending</option>
       <option value="&quot;createdAt&quot;">Oldest first</option>
       <option value="&quot;createdAt&quot; DESC">Newest first</option>
-    </select>
-    <button type="submit" class="btn btn-primary">Sort</button>
+    </select><br>
+    <button type="submit" class="btn btn-primary">Order</button>
   </div>
 </form>
 
@@ -51,11 +52,11 @@
     {{/if}}
   </div>
 </div>
-<div class="clearfix"></div>
+
 <div class="row">
  {{#each products as |product|}}
     <div class="col-xs-4 index-img">
-      <img src="/images/{{product.photo}}" height="180" width="180" /><br>
+      <img src="/images/{{product.photo}}" height="180" width="180" />
       <div class="text-center">
         {{#if (isInCart product.id ../cartProducts)}}
         <form action="/cart" method="GET">
@@ -77,4 +78,4 @@
     </div>
   {{/each}}
 </div>
-<div class="clearfix"></div>
+
