--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,24 +1,36 @@
 /* navbar styles */
+.container {
+  width:auto;
+}
+
 .navbar {
   margin-bottom:0;
   background: #0B3948;
-  color:#fff;
+  color: black;
 }
 
 .navbar .navbar-brand,
 .navbar .navbar-brand:hover,
 .navbar-default .navbar-nav>li>a,
 .navbar-default .navbar-nav>li>a:hover {
-  color: #fff;
+  color: white;
 }
 
 .index-img {
-  margin-bottom: 10px;
+  margin:auto;
+  width:auto;
+  padding-bottom: 10px;
+}
+
+.product-container {
+  margin:auto;
+  width:auto;
+  padding:5%;
 }
 
 
-img {
+/*img {
   margin: auto;
   width: 200px;
 }
-*/
+*/*/
