--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -1,45 +1,52 @@
 <header class="page-header">
  <h1>Products</h1>
-
 </header>
 
-<form action="/search" method="GET">
-  <div class="form-group">
-    <input type="text" name="searchText" class="form-control" id="search_text" placeholder="Search">
-    <br>
-     <button type="submit" class="btn btn-primary">Search</button>
-  </div>
-</form>
-
-<form action="/filter" method="GET">
-  <div class="form-group">
-    <input type="number" name="minPrice" class="form-control" id="min_price" placeholder="Minimum Price"><br>
-    <input type="number" name="maxPrice" class="form-control" id="max_price" placeholder="Maximum Price"><br>
-    <select name="product[categoryId]" id="category" class="form-control">
-      <option value="">Choose Category: </option>
+<div class="row">
+<div class="col-xs-8 col-xs-offset-2">
+  <form action="/search" method="GET">
+    <div class="input-group">
+      <span class="input-group-btn">
+        <button type="submit" class="btn btn-primary">Search</button>
+      </span>
+      <input type="text" name="searchText" class="form-control" id="search_text" placeholder="Search">
+    </div>
+  </form>
+<br>
+  <form action="/filter" method="GET">
+    <div class="input-group">
+      <span class="input-group-btn">
+        <button type="submit" class="btn btn-primary"> Filter </button>
+      </span>
+      <input type="number" name="minPrice" class="form-control" id="min_price" placeholder="Minimum Price"><br>
+      <input type="number" name="maxPrice" class="form-control" id="max_price" placeholder="Maximum Price"><br>
+      <select name="product[categoryId]" id="category" class="form-control">
+        <option value="">Choose Category: </option>
         {{#each categories as |category| }}
-          <option value="{{ category.id }}">{{ category.name }}</option>
+        <option value="{{ category.id }}">{{ category.name }}</option>
         {{/each }}
       </select>
     </div>
-     <button type="submit" class="btn btn-primary">Filter</button>
-  </div><br>
-</form>
+  </form>
 <br>
-<form action="/order" method="GET">
-  <div class="form-group">
-    <select name="orderBy" id="sort_by" class="form-control">
-      <option value="">Order By:</option>
-      <option value="&quot;name&quot;">By name ascending</option>
-      <option value="&quot;name&quot; DESC">By name descending</option>
-      <option value="&quot;price&quot;">By price ascending</option>
-      <option value="&quot;price&quot; DESC">By price ascending</option>
-      <option value="&quot;createdAt&quot;">Oldest first</option>
-      <option value="&quot;createdAt&quot; DESC">Newest first</option>
-    </select><br>
-    <button type="submit" class="btn btn-primary">Order</button>
-  </div>
-</form>
+  <form action="/order" method="GET">
+    <div class="input-group">
+      <span class="input-group-btn">
+        <button type="submit" class="btn btn-primary">Order</button>
+      </span>
+      <select name="orderBy" id="sort_by" class="form-control">
+        <option value="">Order By:</option>
+        <option value="&quot;name&quot;">By name ascending</option>
+        <option value="&quot;name&quot; DESC">By name descending</option>
+        <option value="&quot;price&quot;">By price ascending</option>
+        <option value="&quot;price&quot; DESC">By price ascending</option>
+        <option value="&quot;createdAt&quot;">Oldest first</option>
+        <option value="&quot;createdAt&quot; DESC">Newest first</option>
+      </select><br>
+    </div>
+  </form>
+</div>
+</div>
 
 <div class="row">
   <div class="col-xs-12 text-center">
@@ -53,7 +60,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row product-container">
  {{#each products as |product|}}
     <div class="col-xs-4 index-img">
       <img src="/images/{{product.photo}}" height="180" width="180" />
@@ -78,4 +85,3 @@
     </div>
   {{/each}}
 </div>
-
