--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -67,17 +67,17 @@
       <div class="text-center">
         {{#if (isInCart product.id ../cartProducts)}}
         <form action="/cart" method="GET">
-          <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
-          <p>{{product.price}}</p>
-          <p>{{product.Category.name}}</p>
+          <h4><a href="/products/{{product.id}}">{{product.name}}</a></h4>
+          <h5>{{product.price}}</h5>
+          <h5>{{product.Category.name}}</h5>
           <button type="submit" class="btn btn-success">Edit Cart</button>
         </form>
         {{else}}
         <form action="/addToCart" method="POST">
           <input type="hidden" name="productId" value="{{product.id}}">
-          <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
-          <p>{{product.price}}</p>
-          <p>{{product.Category.name}}</p>
+          <h4><a href="/products/{{product.id}}">{{product.name}}</a></h4>
+          <h5>{{product.price}}</h5>
+          <h5>{{product.Category.name}}</h5>
           <button type="submit" class="btn btn-primary">Add to Cart</button>
         </form>
         {{/if}}
