--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -9,7 +9,7 @@
   <div class="col-xs-3">
       <p>{{currentProduct.name}}</p>
       <p>{{currentProduct.Category.name}}</p>
-      <p>{{currentProduct.price}}</p>
+      <p>${{currentProduct.price}}</p>
   </div>
   <div class="col-xs-6">
       <p>{{currentProduct.description}}</p>
@@ -41,7 +41,7 @@
         {{#if (isInCart product.id ../cartProducts)}}
         <form action="/cart" method="GET">
           <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
-          <p>{{product.price}}</p>
+          <p>${{product.price}}</p>
           <p>{{../currentProduct.Category.name}}</p>
           <button type="submit" class="btn btn-success">Edit Cart</button>
         </form>
@@ -49,7 +49,7 @@
         <form action="/addToCart" method="POST">
           <input type="hidden" name="productId" value="{{product.id}}">
           <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
-          <p>{{product.price}}</p>
+          <p>${{product.price}}</p>
           <p>{{../currentProduct.Category.name}}</p>
           <button type="submit" class="btn btn-primary">Add to Cart</button>
         </form>
