--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+
+body {
+  padding-top: 60px;
+}
+
 .main-image {
   object-fit: cover;
   height: 400px;
@@ -10,6 +15,6 @@
   width: 100%;
 }
 
-body {
-  padding-top: 100px;
+.card {
+  margin: 15px 0;
 }
