--- a/views/products/_product.handlebars
+++ b/views/products/_product.handlebars
@@ -5,7 +5,7 @@
     </a>
     <div class="card-block">
       <div class="float-right">
-        ${{product.price}}
+        {{currency product.price}}
       </div>
       <h4 class="card-title">
         <a href="/products/{{ product.id }}">
@@ -21,10 +21,7 @@
       <p class="card-text">
         {{product.description}}
       </p>
-      <form action="/cart" method="post">
-        <input type="hidden" name="id" value="{{ product.id }}">
-        <button type="submit" class="btn btn-primary">+ Cart</button>
-      </form>
+      {{> shared/_cartButton cartIds=cartIds productId=product.id}}
     </div>
   </div>
 </div>
